XHARNESS-25: Added new subsection condition XHARNESS-26: Added min and max occurrence attribute to outputcontains and outputregex XHARNESS-28: Changed default stream for non-process tasks to info XHARNESS-29: Fixed No-ANSI filter pattern XHARNESS-30: Added "docMode" to outputregex to allow regex to span across lines